0.9.3/_sources/gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py:


Processing Relaxation measurement
=================================
Processing NMR spectra taken for relaxation measurements

Requires the official ``spectrochempy-nmr`` plugin.
Install with: ``pip install spectrochempy[nmr]``.

.. GENERATED FROM PYTHON SOURCE LINES 16-17

.. code-block:: default









.. GENERATED FROM PYTHON SOURCE LINES 19-21

Import API
----------

.. GENERATED FROM PYTHON SOURCE LINES 21-26

.. code-block:: default

    import spectrochempy as scp

    # short version of the unit registry
    U = scp.ur








.. GENERATED FROM PYTHON SOURCE LINES 27-30

Importing a pseudo 2D NMR spectra
---------------------------------
Define the folder where are the spectra

.. GENERATED FROM PYTHON SOURCE LINES 30-35

.. code-block:: default

    datadir = scp.preferences.datadir
    nmrdir = datadir / "nmrdata" / "bruker" / "tests" / "nmr"

    dataset = scp.nmr.read_topspin(nmrdir / "relax" / "100" / "ser", use_list="vdlist")








.. GENERATED FROM PYTHON SOURCE LINES 36-39

Analysing the data
---------------------
Print dataset summary

.. GENERATED FROM PYTHON SOURCE LINES 39-41

.. code-block:: default

    dataset






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class='scp-output'><details><summary>NDDataset: [complex128] pp (shape: (y:9, x:1982))[relax expno:100 procno:1 (SER)]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         name</div><div>:</div><div class="attr-value"> relax expno:100 procno:1 (SER)</div></div>
    <div class="scp-output section"><div class="attr-name">       author</div><div>:</div><div class="attr-value"> runner@runnervm3jyl0</div></div>
    <div class="scp-output section"><div class="attr-name">      created</div><div>:</div><div class="attr-value"> 2026-06-05 15:43:15+00:00</div></div></details></div>
    <div class="scp-output section"><details><summary>          Data </summary>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> intensity</div></div>
    <div class="scp-output section"><div class="attr-name">       values</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='numeric'>         R[[  0.5522    2.137 ...   -1.437 -0.02603]<br/>           [   1.099    3.404 ...  -0.6497  -0.0129]<br/>           ...<br/>           [   1.603     5.99 ...    4.959  0.09235]<br/>           [    1.61     6.14 ...  -0.7725 -0.01501]] pp<br/>         I[[  -1.513   -2.733 ...    4.471  0.08437]<br/>           [  -2.496   -4.623 ...   -6.003  -0.1152]<br/>           ...<br/>           [   -4.25   -7.726 ...    4.695  0.08693]<br/>           [  -4.302    -7.69 ...    0.222 0.004867]] pp</div>
    <div class="scp-output section"><div class="attr-name">        shape</div><div>:</div><div class="attr-value"> (y:9, x:1982(complex))</div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 1982</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> F2 acquisition time</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[       0      6.4 ... 1.267e+04 1.268e+04] µs</div></div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 9</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> time</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[       1        2 ...       20       50] s</div></div></div></details></div></details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 42-43

Plot the dataset

.. GENERATED FROM PYTHON SOURCE LINES 43-47

.. code-block:: default

    ds = dataset.em(lb=15 * U.Hz)
    ds = ds.fft()
    ds = ds.pk(phc0=-10 * U.deg, phc1=0 * U.deg)
    ds.plot(xlim=(-60, -140))



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax_001.png
   :alt: plot spectrochempy nmr  processing  nmr  plot processing nmr relax
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='$\\delta\\ ^{29}Si$ $\\mathrm{/\\ \\mathrm{ppm}}$', ylabel='intensity $\\mathrm{/\\ \\mathrm{pp}}$'>



.. GENERATED FROM PYTHON SOURCE LINES 48-49

Integrate a region

.. GENERATED FROM PYTHON SOURCE LINES 49-53

.. code-block:: default

    dsint = ds[:, -90.0:-115.0].simpson()
    dsint.plot(marker="^", ls=":")
    dsint.real




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax_002.png
   :alt: plot spectrochempy nmr  processing  nmr  plot processing nmr relax
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax_002.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class='scp-output'><details><summary>NDDataset: [float64] pp⋅ppm (size: 9)[relax expno:100 procno:1 (SER)]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         name</div><div>:</div><div class="attr-value"> relax expno:100 procno:1 (SER)</div></div>
    <div class="scp-output section"><div class="attr-name">       author</div><div>:</div><div class="attr-value"> runner@runnervm3jyl0</div></div>
    <div class="scp-output section"><div class="attr-name">      created</div><div>:</div><div class="attr-value"> 2026-06-05 15:43:15+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">  description</div><div>:</div><div class="attr-value"> <div>Integration of NDDataset 'relax expno:100 procno:1 (SER)' along dim: 'x'.</div></div></div>
    <div class="scp-output section"><div class="attr-name">      history</div><div>:</div><div class="attr-value"> <div>2026-06-05 15:43:15+00:00> Dataset resulting from application of `simpson` method</div></div></div></details></div>
    <div class="scp-output section"><details><summary>          Data </summary>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> area</div></div>
    <div class="scp-output section"><div class="attr-name">       values</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='numeric'>         [    1507     2543 ...     4173     4300] pp⋅ppm</div>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 9</div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 9</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> time</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[       1        2 ...       20       50] s</div></div></div></details></div></details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 54-57

Fit a model
-----------
create an Optimize object using a simple leastsq method

.. GENERATED FROM PYTHON SOURCE LINES 57-60

.. code-block:: default

    fitter = scp.Optimize(log_level="INFO", method="leastsq")









.. GENERATED FROM PYTHON SOURCE LINES 61-62

Define the model to fit

.. GENERATED FROM PYTHON SOURCE LINES 62-70

.. code-block:: default

    def T1_model(t, I0, T1):  # no underscore in parameters names.
        # T1 relaxation model
        import numpy as np

        I = I0 * (1 - np.exp(-t / T1))
        return I









.. GENERATED FROM PYTHON SOURCE LINES 71-72

Add the model to the fitter usermodels as it it not a built-in model

.. GENERATED FROM PYTHON SOURCE LINES 72-74

.. code-block:: default

    fitter.usermodels = {"T1_model": T1_model}








.. GENERATED FROM PYTHON SOURCE LINES 75-78

Define the parameter variables using a script
(parameter: value, low_bound,  high_bound)
no underscore in parameters names.

.. GENERATED FROM PYTHON SOURCE LINES 78-85

.. code-block:: default

    fitter.script = """
    MODEL: T1
    shape: T1_model
      $ I0:  1000.0, 1, none
      $ T1:  2.0,    0.1, none
    """








.. GENERATED FROM PYTHON SOURCE LINES 86-87

Performs the fit

.. GENERATED FROM PYTHON SOURCE LINES 87-89

.. code-block:: default

    fitter.fit(dsint)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

        
    <spectrochempy.analysis.curvefitting.optimize.Optimize object at 0x7f40d1ce1d00>



.. GENERATED FROM PYTHON SOURCE LINES 90-93

.. code-block:: default

    som = fitter.predict()
    som






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class='scp-output'><details><summary>NDDataset: [float64] pp⋅ppm (shape: (u:1, y:9))[relax expno:100 procno:1 (SER)_Optimize.inverse_transform]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         name</div><div>:</div><div class="attr-value"> relax expno:100 procno:1 (SER)_Optimize.inverse_transform</div></div>
    <div class="scp-output section"><div class="attr-name">       author</div><div>:</div><div class="attr-value"> runner@runnervm3jyl0</div></div>
    <div class="scp-output section"><div class="attr-name">      created</div><div>:</div><div class="attr-value"> 2026-06-05 15:43:15+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">      history</div><div>:</div><div class="attr-value"> <div>2026-06-05 15:43:15+00:00> Created using method Optimize.inverse_transform</div></div></div></details></div>
    <div class="scp-output section"><details><summary>          Data </summary>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> area</div></div>
    <div class="scp-output section"><div class="attr-name">       values</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='numeric'>         [[    1506     2470 ...     4185     4185]] pp⋅ppm</div>
    <div class="scp-output section"><div class="attr-name">        shape</div><div>:</div><div class="attr-value"> (u:1, y:9)</div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 9</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> time</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[       1        2 ...       20       50] s</div></div></div></details></div></details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 94-96

.. code-block:: default

    fitter.plotmerit(dsint, som, method="scatter", title="T1 relaxation fitting")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax_003.png
   :alt: T1 relaxation fitting
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: title={'center': 'T1 relaxation fitting'}, xlabel='time $\\mathrm{/\\ \\mathrm{s}}$', ylabel='area $\\mathrm{/\\ \\mathrm{pp} \\cdot \\mathrm{ppm}}$'>



.. GENERATED FROM PYTHON SOURCE LINES 97-99

This ends the example ! The following line can be removed or commented
when the example is run as a notebook (`.ipynb`).

.. GENERATED FROM PYTHON SOURCE LINES 99-101

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.460 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py <plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.ipynb <plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.ipynb>`
